# manifold

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ctest.yml
include/manifold/: _defines.hpp  concepts.hpp  dbg.hpp  manifold.hpp
include/manifold/adt/: bitflags.hpp  result.hpp
include/manifold/os/: env.hpp  fs.hpp  str.hpp
lib/: CMakeLists.txt
lib/os/: env.cpp  fs.cpp  str.cpp
test/: CMakeLists.txt  bitflags.cpp  env.cpp  fs.cpp  str.cpp
